Update Config “general”

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "base_url": "https://wutali-nextjs-netlify-blog.netlify.app",
-  "site_title": "Next.js Netlify Blog",
-  "site_description": "Next.js blog template for Netlify",
+  "base_url": "https://compassionate-jennings-382ffe.netlify.app/",
+  "site_title": "Next.js Netlify Blog Filho",
+  "site_description": "Next.js blog template for Netlify Filho",
   "site_keywords": [
     {
       "keyword": "Next.js"
